--- a/index.html
+++ b/index.html
@@ -225,25 +225,25 @@
     </div>
     <footer class="rodape">
         <div>
-            <a href="link_para_consultas">
+            <a href="#">
                 <img src="./img/calendarioicone.png" width="auto" height="auto" alt="calendario">
                 <p>Consultas</p>
             </a>
         </div>
         <div>
-            <a href="link_para_clientes">
+            <a href="#">
                 <img src="./img/clientesicone.png" width="auto" height="auto" alt="clientes">
                 <p>Clientes</p>
             </a>
         </div>
         <div>
-            <a href="link_para_relatorios">
+            <a href="#">
                 <img src="./img/relatoriosicone.png" width="auto" height="auto" alt="relatorios">
                 <p>Relatórios</p>
             </a>
         </div>
         <div>
-            <a href="link_para_menu">
+            <a href="#">
                 <img src="./img/menuicone.png" width="auto" height="auto" alt="menu">
                 <p>Menu</p>
             </a>
